--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
 <h1>CalcuType</h1>
-<blockquote style="font-style:italic;"><p>We're still working on this program.  Please <a href="mailto:gb@cs.unc.edu">let us know what you think of it</a>!  Thanks!
+<blockquote style="font-style:italic;"><p>We're still working on this program.  Please let us know what you think of it by <a href="mailto:gb@cs.unc.edu">emailing us at gb@cs.unc.edu</a>!  Thanks!
 <br />&mdash;William Condon
 <br />&mdash;Dr. Gary Bishop</p>
 </blockquote>
-<h1 id="collapse" style="color:red;">We're sorry.  You cannot use the CalcuType until you enable JavaScript on your browser.</h1>
+<h1 id="collapse" style="color:red;">We're sorry.  You cannot use CalcuType until you enable JavaScript on your browser.</h1>
 <script type="text/javascript">document.getElementById("collapse").style.visibility = 'hidden';</script>
 
 <hr />
-<h1>Start using the CalcuType:</h1>
-<ul><li><a href="options.html">Set the CalcuType as you like it!</a></li>
+<h1>Start using CalcuType:</h1>
+<ul><li><a href="options.html">Set CalcuType as you like it!</a></li>
 <li><a href="jscalc.html">Write a document!</a></li>
 <li><a href="framebuilder.html">Fill in a form!</a>
 <ul><li><a href="framebuilder.html?UseTwoSwitchTyping=true&timerLength=1000&SWITCH1=221&SWITCH2=219&SWITCH3=220&use_rad=true&precision=3&mem_lets=4&H_COL=#cc6600&TAREA_COL=white&KEY_SIZE=40&repeat=3&reset=true&TEXT_SIZE=30&Alphabet=ABC&startLoaded=mathdemo.html&addi=">
-Try completing a math homework sheet using the CalcuType</a></li></ul></li>
+Try completing a math homework sheet using CalcuType</a></li></ul></li>
 <li><a href="about.html">Read a longer description</a></li>
 </ul>
 <hr />
@@ -32,6 +32,10 @@ Try completing a math homework sheet using the CalcuType</a></li></ul></li>
 <li>To write a document, either:
 <ul><li>Click on a letter in the virtual keyboard.</li>
 <li>Select the row and column by using the <code>[]</code> keys.</li>
+  <ol><li>Press the <code>]</code> key until the correct row is highlighted.</li>
+  <li>Press the <code>[</code> key to select the row.</li>
+  <li>Press the <code>]</code> key until the correct letter or symbol is highlighted.</li>
+  <li>Press the <code>[</code> key to select the letter or symbol.</li></ol>
 <li>Type the letter on the normal computer keyboard.</li></ul>
 It will show up in the document at right, just as if someone typed it on the normal computer keyboard.
 </li>
@@ -40,9 +44,9 @@ It will show up in the document at right, just as if someone typed it on the nor
 <li>The answer will show up in the upper left corner of the virtual keyboard.</li>
 <li>Either select it from the virtual keyboard as normal, or hit the <code>\</code> key.</li></ol>
 </li>
-<li><a href="about.html#typing">Read more about writing a document in the CalcuType.</a></li>
-<li><a href="about.html#math">Read more about doing math in the CalcuType.</a></li>
-<li><a href="about.html#symbols">Read more about different ways to do things in the CalcuType.</a></li>
+<li><a href="about.html#typing">Read more about writing a document in CalcuType.</a></li>
+<li><a href="about.html#math">Read more about doing math in CalcuType.</a></li>
+<li><a href="about.html#symbols">Read more about different ways to do things in CalcuType.</a></li>
 </ul>
 
 
@@ -51,7 +55,7 @@ It will show up in the document at right, just as if someone typed it on the nor
 <p>	Motor-disabled people are often unable to use a computer keyboard, which prevents them from accessing most computer functions.  However, they can often use simple buttons or joysticks with an onscreen "virtual keyboard."  In addition, learning-disabled people often need a simple typing program with word-completion to enable them to write much better.</p>
 <p>  Most existing programs are executable files, which system administrators must install on each individual machine.  However - even aside from only working on a single computer - they have several problems.  For example, it is quite hard to switch between applications, and they have no embedded calculator.
 </p>
-<p>The CalcuType is a simple Web-based text editor and calculator which works entirely inside the browser.  Therefore, it can run on any Internet-capable computer.  It has built-in <a href="about.html#typing">text editing</a>, <a href="about.html#math">mathematical equation solving</a>, and <a href="about.html#completion">word completion</a>.</p>
+<p>CalcuType is a simple Web-based text editor and calculator which works entirely inside the browser.  Therefore, it can run on any Internet-capable computer.  It has built-in <a href="about.html#typing">text editing</a>, <a href="about.html#math">mathematical equation solving</a>, and <a href="about.html#completion">word completion</a>.</p>
 <hr />
 
 
