--- a/files/wordlistmaker.html
+++ b/files/wordlistmaker.html
@@ -1,6 +1,6 @@
 <html><head><script type="text/javascript">
 function makeJsWordList(/*String*/ list, /*boolean*/putAtBeginning) {
-  var beginninginfo = '/*Click cntrl+a to select all this text, and save it as a JavaScript file (e.g. yourNameHere.js ) in the "files" directory.  <b>WARNING:  DO NOT USE THE "SAVE ALL" BUTTON ON THE "FILE" MENU!!!</b> Then put the following line in your jscalc.html file, immediately after <br />&lt;script type="text/javascript" src="files/Gutenberg 10,000.js"&gt;&lt;/script&gt; <br /> &lt;script type="text/javascript" src="files/yourNameHere.js"&gt;&lt;/script&gt; <br />*/ <br /><br />';
+  var beginninginfo = '/*Click cntrl+a to select all this text, and save it as a JavaScript file (e.g. yourNameHere.js ) in the "files" directory (where <tt>common.js</tt> is located).  <br /><b>WARNING:  DO NOT USE THE "SAVE ALL" BUTTON ON THE "FILE" MENU!!!</b> Then add the following line to your <tt>jscalc.html</tt> and <tt>framebuilder.html</tt> files, immediately after <br /><tt>&lt;script type="text/javascript" src="files/Gutenberg 10,000.js"&gt;&lt;/script&gt; <br /><br /> <b>&lt;script type="text/javascript" src="files/yourNameHere.js"&gt;&lt;/script&gt;</b></tt> <br />*/ <br /><br />';
   list = list.replace('\n', '",\n"', 'g');
   list = 'new Array("' + list;
   list += '")'
@@ -14,13 +14,14 @@ function makeJsWordList(/*String*/ list, /*boolean*/putAtBeginning) {
 }
 </script>
 
-<body>
-<p>Addenda to standard word list (put each word on new line):<br /><textarea id="list" cols="12" rows="30"></textarea>
+<body onload="document.getElementById('list').focus();">
+<p>Addenda to standard word list (put each word on new line):<br />
+<textarea id="list" cols="12" rows="30"></textarea>
 <br />
-Put at beginning? <input type="checkbox" id="putAtBeginning" />
+<label for="putAtBeginning">Put at beginning?</label> <input type="checkbox" id="putAtBeginning" />
 <br /><input type="submit" value="Process"
 onclick="document.body.innerHTML = makeJsWordList(document.getElementById('list').value, document.getElementById('putAtBeginning').checked);" />
 </p>
-<p style="font-weight:bold">Note:  CalcuType must be downloaded to your local computer to use this feature.</p>
+<p style="font-weight:bold">Note:  While you can make a word list using this page at any time, you cannot use your new lists until you <a href="http://code.google.com/p/calcutype/downloads/list">download CalcuType to your local computer</a>.</p>
 </body>
 </html>
