--- a/trunk/index.html
+++ b/trunk/index.html
@@ -20,7 +20,7 @@
 <h1>Start using CalcuType:</h1>
 <ul><li><a href="options.html">Set CalcuType as you like it!</a></li>
 <li><a href="jscalc.html">Write a document!</a></li>
-<li><a href="framebuilder.html">Fill in a form!</a>
+<li><a href="framebuilder.html">Fill in a form!</a> <i>Note:  CalcuType must be downloaded to your local computer to use this feature.</i>
 <ul><li><a href="framebuilder.html?UseTwoSwitchTyping=true&timerLength=1000&SWITCH1=221&SWITCH2=219&SWITCH3=220&use_rad=true&precision=3&mem_lets=4&H_COL=#cc6600&TAREA_COL=white&KEY_SIZE=40&repeat=3&reset=true&TEXT_SIZE=30&Alphabet=ABC&startLoaded=mathdemo.html&addi=">
 Try completing a math homework sheet using CalcuType</a></li></ul></li>
 <li><a href="about.html">Read a longer description</a></li>
