--- a/trunk/options.html
+++ b/trunk/options.html
@@ -289,7 +289,7 @@ to go directly to the typer page.  When you're at the typer page, you can bookma
 <p>
 <input name="button" value="Process form" onclick="processForm(this.form)" type="button" />
 After processing
-<img src="files/spacer.gif" width="130" height="1" alt="   " /><a id="newdoc" href="javascript:;">click here to write a new document</a>, or <a id="frameset" href="javascript:;">click here to fill out a form.</a> <br />
+<img src="files/spacer.gif" width="130" height="1" alt="   " /><a id="newdoc" href="javascript:;">click here to write a new document</a>, or <a id="frameset" href="javascript:;">click here to fill out a form.</a> <i>Note:  CalcuType must be downloaded to your local computer to fill out a form.</i> <br />
 <input type="text" maxlength="1024" readonly="readonly" name="genURL" id="genURL" value="The URL will appear here" />
 </p>
 </form>
