--- a/trunk/about.html
+++ b/trunk/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>About Calcutype</h1>
-<p>Calcutype, version 0.75
+<p>Calcutype, version 0.76
 <br />Written 2008-2009, William Condon, with Dr. Gary Bishop <i>(<a href="mailto:gb@cs.unc.edu">Email: gb@cs.unc.edu</a>)</i>
 <br /><strong style="text-align:center">Note:  JavaScript must be enabled to use this program!</strong> 
 <i><script type="text/javascript">document.write("JavaScript is currently enabled on your browser.");</script></i>
@@ -75,7 +75,7 @@ a list of the 10000 most commonly used words in the <a href="http://www.gutenber
 <tr><td>&pi;</td><td><ul><li>The Greek letter pi.</li> <li>The ratio of a circle's circumference to its diameter.</li><li>Approximately
 <script type="text/javascript">document.write(Math.PI);</script></li></ul></td></tr>
 <tr><td><img src="files/tab.png" alt="tab" /></td><td>Advance the cursor to the next box in the form.</td></tr>
-<tr><td><img src="files/new-form.PNG" alt="new form" /></td><td>Load a new form.</td></tr>
+<tr><td><img src="files/new-form.PNG" alt="open" /></td><td>Load a new form.</td></tr>
 <tr><td><img src="files/backspace.png" alt="backspace" /></td><td>Backspace.  (Deletes the last letter you typed.)</td></tr>
 <tr><td><img src="files/backspace_w.png" alt="backspace one word" /></td><td>Backspace through word.  (Deletes everything between the cursor and the last space before the cursor.)</td></tr>
 <tr><td><img src="files/pilcrow.png" alt="carriage return" /></td><td>Carriage return.  (Equivalent to pressing 'enter' in a normal text editor.)</td></tr>
