--- a/trunk/jsinframe.html
+++ b/trunk/jsinframe.html
@@ -69,7 +69,7 @@ for(var agindex=0; agindex < parent.arrayGroup.length-1; agindex++) {
 
 <h1>Caps lock is <span id="caplock">OFF</span></h1>
 
-<table><tr id="loader" style="background-color: #cc6600; font-size: 150%;"><td>Type URL or filename of the form to load, including any filename extensions, and then select <img src="files/new-form.png" alt="new" height="20" />. <br />
+<table><tr id="loader" style="background-color: #cc6600; font-size: 150%;"><td>Type URL or filename of the form to load, including any filename extensions, and then select <img src="files/new-form.PNG" alt="open" height="20" />. <br />
 <input type="text" id="url" name="url" onkeydown="parent.keyPressed(event);" style="width:90%" />
 </td></tr></table>
 </body>
