Deleted foreign words from word list; added Wiki General Service.

--- a/jscalc.html
+++ b/jscalc.html
@@ -32,6 +32,7 @@ textarea { font-size: 30px;
 
 <script type="text/javascript" src="files/common.js"></script>
 <script type="text/javascript" src="files/Gutenberg 10,000.js"></script>
+<script type="text/javascript" src="files/Wiki2284GeneralService.js"></script>
 <script type="text/javascript" src="files/wiki570academicsupp.js"></script>
 <script type="text/javascript">
 <!--
