--- a/framebuilder.html
+++ b/framebuilder.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="files/common.js"></script>
 
 <script type="text/javascript" src="files/Gutenberg 10,000.js"></script>
+<script type="text/javascript" src="files/Wiki2284GeneralService.js"></script>
 <script type="text/javascript" src="files/wiki570academicsupp.js"></script>
 <script type="text/javascript">
 <!--
