--- a/trunk/about.html
+++ b/trunk/about.html
@@ -22,7 +22,7 @@
 <h1>Getting Started</h1>
 <p>You should probably begin at the <a href="options.html">options page</a>, which lets you set certain features before beginning.  You only need to visit the options page once - afterwards, you can bookmark that particular version of the typer in your browser's bookmarks list.  From the options page, you can proceed to either fill out an existing form or write your own document.  Unfortunately, only <a href="http://en.wikipedia.org/wiki/plain_text">plain text</a> is supported at the moment - that is, no <i>italics</i>, <b>bold face</b>, or different text sizes.</p>
 <p>To proceed directly to the program with default settings, click here to <a href="framebuilder.html">fill out an existing form</a> or <a href="jscalc.html">write your own document</a>.  <b><i>Note:  CalcuType must be downloaded to your local computer to fill out a form.</i></b></p>
-<p><i>SUPPORTED BROWSERS:  CalcuType was tested in Firefox 3.0.4 and Internet Explorer 7.  While it works in Internet Explorer, we strongly recommend that (if possible) you <a href="http://www.getfirefox.com">get the free Firefox web browser</a>.</i></p>
+<p><i>SUPPORTED BROWSERS:  CalcuType was tested in Firefox 3.0.4, Internet Explorer 7, Epiphany (version not known), and Google Chrome 1.0.154.46.  While it works in Internet Explorer, we strongly recommend that (if possible) you <a href="http://www.getfirefox.com">get the free Firefox web browser</a>.</i></p>
 
 <hr />
 <h2 id="typing">Typing</h2>
