--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <h1>About Calcutype</h1>
-<p>Calcutype, version 0.80
-<br />Written 2008-2009, William Condon, with Dr. Gary Bishop <i>(<a href="mailto:gb@cs.unc.edu">Email: gb@cs.unc.edu</a>)</i>
+<p>Calcutype, version 0.85
+<br />Written 2008-2009 by William Condon, with Dr. Gary Bishop <i>(<a href="mailto:gb@cs.unc.edu">Email: gb@cs.unc.edu</a>)</i>
 <br /><strong style="text-align:center">Note:  JavaScript must be enabled to use this program!</strong> 
 <i><script type="text/javascript">document.write("JavaScript is currently enabled on your browser.");</script></i>
 <br />This program is still under development... any feedback will be greatly appreciated!
