added a bit of explanation about the control characters

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@ Try completing a math homework sheet using CalcuType</a></li></ul></li>
 <ul><li>Click on a letter in the virtual keyboard.</li>
 <li>Select the row and column by using the <code>[]</code> keys.</li>
   <ol><li>Press the <code>]</code> key until the correct row is highlighted.</li>
-  <li>Press the <code>[</code> key to select the row.</li>
-  <li>Press the <code>]</code> key until the correct letter or symbol is highlighted.</li>
-  <li>Press the <code>[</code> key to select the letter or symbol.</li></ol>
+  <li>Press the <code>[</code> (open square bracket) key to select the row.</li>
+  <li>Press the <code>]</code> (close square bracket) key until the correct letter or symbol is highlighted.</li>
+  <li>Press the <code>[</code> (open square bracket) key to select the letter or symbol.</li>
+  <li>You may use the <code>\</code> (reverse slash) key to select the suggested completion.</li>
+</ol>
 <li>Type the letter on the normal computer keyboard.</li></ul>
 It will show up in the document at right, just as if someone typed it on the normal computer keyboard.
 </li>
