--- a/trunk/about.html
+++ b/trunk/about.html
@@ -94,8 +94,11 @@ a list of the 10000 most commonly used words in the <a href="http://www.gutenber
 
 
 <hr />
-
-<div style="font-size:70%" id="copyright"><h2>COPYRIGHT</h2>
+<h2>Copying</h2>
+<p>We'd love for you to use this code, or any part of it, in any way you want.  Please help us help people!  Of course, we'd appreciate if you let us know and allow other people to do the same with your code, but we aren't forcing you to do that.</p>
+<p>To download CalcuType to your computer, including source code, please go to <a href="http://code.google.com/p/calcutype/">our project's page on Google Code</a>.  Have fun!</p>
+<hr />
+<div id="copyright" style="font-size:70%;"><h2>COPYRIGHT NOTICE</h2>
 <p>There are several parts of this work:</p>
 <ul><li>The <a href="files/Gutenberg 10,000.js">word list</a>.
 <p>This is obtained from the Project Gutenberg ebooks.  Project Gutenberg's license is:  
