--- a/trunk/options.html
+++ b/trunk/options.html
@@ -180,7 +180,7 @@ to go directly to the typer page.  When you're at the typer page, you can bookma
     <input name="SWITCH1" id="cbr" value="221" checked="checked" type="radio" />
     <label for="cbr">Close bracket <i>]</i></label><br />
     <input name="SWITCH1" id="other1" value="-" type="radio" onchange="selectingOther1isTrue();" />
-    <label for="other1" id="Other1label">Other <i>(Check; then press key)</i></label><br />
+    <label for="other1" id="Other1label">Other <i>(not set)</i></label><br />
   </td>
   <td style="background-color: #33cc99;">
     <input name="SWITCH2" id="Mouse2" value="-2" type="radio" />
@@ -194,7 +194,7 @@ to go directly to the typer page.  When you're at the typer page, you can bookma
     <input name="SWITCH2" id="obr" value="219" checked="checked" type="radio" />
     <label for="obr">Open bracket <i>[</i></label><br />
     <input name="SWITCH2" id="other2" value="-" type="radio" onchange="selectingOther2isTrue();" />
-    <label for="other2" id="Other2label">Other <i>(Check; then press key)</i></label><br />
+    <label for="other2" id="Other2label">Other <i>(not set)</i></label><br />
   </td>
   <td style="background-color: #33cc00;">
     <input name="SWITCH3" id="Mouse3" value="-2" type="radio" />
@@ -204,9 +204,9 @@ to go directly to the typer page.  When you're at the typer page, you can bookma
     <input name="SWITCH3" id="Shift3" value="32" type="radio" />
     <label for="Shift3">Shift</label><br />
     <input name="SWITCH3" id="fslash" value="220" checked="checked" type="radio" />
-    <label for="fslash">Forward slash <i>\</i></label><br />
+    <label for="fslash">Backslash <i>\</i></label><br />
     <input name="SWITCH3" id="other3" value="-" type="radio" onchange="selectingOther3isTrue();" />
-    <label for="other3" id="Other3label">Other <i>(Check; then press key)</i></label><br />
+    <label for="other3" id="Other3label">Other <i>(not set)</i></label><br />
   </td>
   </tr>
   </tbody>
