--- a/trunk/options.html
+++ b/trunk/options.html
@@ -143,9 +143,7 @@ function processKey(e)  {
 
 </head><body onkeydown="processKey(event)">
 <h1 style="text-align:center">CalcuType Control Panel</h1>
-<p>To use the control panel, set the options like you want them and then click the "Process Form" button.
-You can then either copy and paste the URL from the text box or click on the link "Click here after processing"
-to go directly to the typer page.  When you're at the typer page, you can bookmark that page (ctrl+d in Firefox or Internet Explorer) to save the options you selected.</p>
+<p>To use the control panel, set the options like you want them and then click the link to go directly to the typer page.  When you're at the typer page, you can bookmark that page (ctrl+d in Firefox or Internet Explorer) to save the options you selected.</p>
 <hr />
 <form action="" method="get" id="thebigform">
 <table width="600" border="0" cellpadding="0" cellspacing="0">
