--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>About Calcutype</h1>
-<p>Calcutype, version 0.86
+<p>Calcutype, version 0.95
 <br />Written 2008-2009 by William Condon, with Dr. Gary Bishop <i>(<a href="mailto:gb@cs.unc.edu">Email: gb@cs.unc.edu</a>)</i>
 <br /><strong style="text-align:center">Note:  JavaScript must be enabled to use this program!</strong> 
 <i><script type="text/javascript">document.write("JavaScript is currently enabled on your browser.");</script></i>
@@ -61,6 +61,7 @@ a list of the 10000 most commonly used words in the <a href="http://www.gutenber
 <ul><li>Gives remainder when the first number is divided by the second number.</li>
 <li>For example, <tt>5%2</tt> yields <tt>1</tt>.</li></ul></li>
 <li>Pi</li>
+<li>Exponents.  For example, <tt>2^10</tt> yields <tt>1024</tt>.</li>
 <li>The trig functions, <tt>sin(&theta;), cos(&theta;), tan(&theta;), asin(x), acos(x)</tt>, and <tt>atan(x)</tt></li>
 <li>Euler's Number, <i>e</i></li>
 <li>Natural logs (<tt>ln(x)</tt>) and square roots (<tt>sqrt(x)</tt>).
